apps/base/commafeed/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commafeed
  namespace: commafeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commafeed
  template:
    metadata:
      labels:
        app: commafeed
    spec:
      containers:
        - name: commafeed
          image: athou/commafeed:7.1.0-postgresql
          ports:
            - containerPort: 8082
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 256Mi
              cpu: 500m
