apps/base/commafeed/service.yml
apiVersion: v1
kind: Service
metadata:
  name: commafeed
  namespace: commafeed
spec:
  selector:
    app: commafeed
  ports:
  - port: 8082
    targetPort: 8082
    protocol: TCP
