apps/base/commafeed/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commafeed
  namespace: commafeed
  annotations:
    traefik.ingress.kubernetes.io/headers: |
      browserXssFilter: true
      contentTypeNosniff: true
      forceSTSHeader: true
      stsIncludeSubdomains: true
      stsPreload: true
      stsSeconds: 31536000
      customFrameOptionsValue: "SAMEORIGIN"
      contentSecurityPolicy: "default-src 'self'; script-src 'self'"
      referrerPolicy: "strict-origin-when-cross-origin"
      permissionsPolicy: "camera=(), microphone=(), geolocation=()"
spec:
  tls:
  - hosts:
    - commafeed.leotsgo.dev
  rules:
  - host: commafeed.leotsgo.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: commafeed
            port:
              number: 8082
